addition lines removed from index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <h1>Number Conversion</h1>
     <div class="content">
-        <p id="color-red"><strong>Note: </strong> Please click on 'select' button after selecting conversion <br>
-        created from develop branch</p>
+        <p id="color-red"><strong>Note: </strong> Please click on 'select' button after selecting conversion</p>
         <form action="#" method="post" id="bin_method_sel" class="form">
                 <select name="conversion_methods" id="methods" class="input">
                     <option value="bin2dec">Binary to Decimal</option>  <!-- done -->
