--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Number Conversion</h1>
     <div class="content">
         <p id="color-red"><strong>Note: </strong> Please click on 'select' button after selecting conversion</p>
-        <form action="#" method="post" id="bin_method_sel" class="form">
+        <form action="#" method="post"  class="form">
                 <select name="conversion_methods" id="methods" class="input">
                     <option value="bin2dec">Binary to Decimal</option>  <!-- done -->
                     <option value="dec2bin">Decimal to Binary</option> <!-- done -->
@@ -24,9 +24,11 @@
             <input type="text" name="" id="input-value" class="input">
             <input type="button" value="Convert" id="convert" class="btn">
             <br>
-            <span id="conversion-name"></span>
-            <input type="text" name="" id="output-value" class="input" readonly>
-            <input type="button" value="copy" id="copy" class="input">
+            <div class="output">
+                <span id="conversion-name"></span>
+                <input type="text" name="" id="output-value" class="input" readonly>
+                <input type="button" value="copy" id="copy" class="input">
+            </div>
         </p>
         </form>
         </div>
