Buttons and Background color is changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Number Conversion</h1>
+    <h1>Number Converter</h1>
     <div class="content">
         <p id="color-red"><strong>Note: </strong> Please click on 'select' button after selecting conversion</p>
         <form action="#" method="post"  class="form">
@@ -21,6 +21,7 @@
                 </select>
             <input type="button" value="Select" id="selected" class="btn">
             <br>
+            <span id="enter-number"></span>
             <input type="text" name="" id="input-value" class="input">
             <input type="button" value="Convert" id="convert" class="btn">
             <br>
