some minor changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             <br>
             <div class="output">
                 <span id="conversion-name"></span>
-                <input type="text" name="" id="output-value" class="input" readonly>
-                <input type="button" value="copy" id="copy" class="input">
+                <div id="output-value-wrapper">
+                    <input type="text" name="" id="output-value" class="input" readonly>
+                    <button id="copy" class="input">copy</button>
+                </div>
             </div>
         </p>
         </form>
