--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Number Converter</h1>
-    <div class="content">
+    <div class="content shadow">
         <p id="color-red"><strong>Note: </strong> Please click on 'select' button after selecting conversion</p>
-        <form action="#" method="post"  class="form">
-                <select name="conversion_methods" id="methods" class="input">
+        <form action="#" method="post"  class="form display-flex">
+                <select name="conversion_methods" id="methods" class="input shadow">
                     <option value="bin2dec">Binary to Decimal</option>  <!-- done -->
                     <option value="dec2bin">Decimal to Binary</option> <!-- done -->
                     <option value="hex2dec">Hexadecimal to Decimal</option> <!-- done -->
@@ -22,14 +22,14 @@
             <input type="button" value="Select" id="selected" class="btn">
             <br>
             <span id="enter-number"></span>
-            <input type="text" name="" id="input-value" class="input">
+            <input type="text" name="" id="input-value" class="input shadow">
             <input type="button" value="Convert" id="convert" class="btn">
             <br>
-            <div class="output">
+            <div class="output display-flex">
                 <span id="conversion-name"></span>
-                <div id="output-value-wrapper">
+                <div id="output-value-wrapper" class="shadow display-flex">
                     <input type="text" name="" id="output-value" class="input" readonly>
-                    <button id="copy" class="input">copy</button>
+                    <input type="button" value="copy" id="copy" class="input">
                 </div>
             </div>
         </p>
