--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binary Number Converter</title>
+    <title>Number Converter</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Number Converter</h1>
+    <nav id="top-nav" class="display-flex">
+        <h1 class="brand" >Number Converter</h1>
+    </nav>
     <div class="content shadow">
-        <p id="color-red"><strong>Note: </strong> Please click on 'select' button after selecting conversion</p>
+        <p id="color-red"><strong>Note: </strong> Please click on a'select' button after selecting conversion</p>
         <form action="#" method="post"  class="form display-flex">
-                <select name="conversion_methods" id="methods" class="input shadow">
+                <select name="conversion_methods" id="methods" class="input">
                     <option value="bin2dec">Binary to Decimal</option>  <!-- done -->
                     <option value="dec2bin">Decimal to Binary</option> <!-- done -->
                     <option value="hex2dec">Hexadecimal to Decimal</option> <!-- done -->
@@ -21,15 +23,17 @@
                 </select>
             <input type="button" value="Select" id="selected" class="btn">
             <br>
-            <span id="enter-number"></span>
-            <input type="text" name="" id="input-value" class="input shadow">
-            <input type="button" value="Convert" id="convert" class="btn">
+            <div class="input-value display-flex">
+                <span id="enter-number">Enter Number :</span>
+                <input type="text" name="" id="input-value" class="input">
+                <input type="button" value="Convert" id="convert" class="btn">
+            </div>
             <br>
             <div class="output display-flex">
                 <span id="conversion-name"></span>
-                <div id="output-value-wrapper" class="shadow display-flex">
-                    <input type="text" name="" id="output-value" class="input" readonly>
-                    <input type="button" value="copy" id="copy" class="input">
+                <div id="output-value-wrapper" class="display-flex">
+                    <input type="text" name="conversion-name" id="output-value" class="input" readonly>
+                    <input type="button" value="copy" id="copy" >
                 </div>
             </div>
         </p>
