binValidator(), hexValidator() and decValidator() function is added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="input-value display-flex">
                 <span id="enter-number">Enter Number :</span>
                 <input type="text" name="" id="input-value" class="input">
-                <input type="button" value="Convert" id="convert" class="btn">
+                <div id="input-button-wrapper" class="display-flex">
+                    <input type="button" value="Convert" id="convert" class="btn">
+                    <input type="button" value="Reset" id="reset" class="btn">
+                </div>
             </div>
             <br>
             <div class="output display-flex">
@@ -42,5 +45,6 @@
 
     <script src="script/methods.js"></script>
     <script src="script/app.js"></script>
+    <script src="script/input_validator.js"></script>
 </body>
 </html>
