--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Converter</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <nav id="top-nav" class="display-flex">
-        <h1 class="brand" >Number Converter</h1>
+        <h1 class="brand">Number Converter</h1>
     </nav>
-    <div class="content shadow">
-        <p id="color-red"><strong>Note: </strong> Please click on a'select' button after selecting conversion</p>
-        <form action="#" method="post"  class="form display-flex">
+    <div class="main display-flex">
+
+        <div class="content shadow">
+            <p id="color-red"><strong>Note: </strong> Please click on a'select' button after selecting conversion</p>
+            <form action="#" method="post" class="form display-flex">
                 <select name="conversion_methods" id="methods" class="input">
-                    <option value="bin2dec">Binary to Decimal</option>  <!-- done -->
+                    <option value="bin2dec">Binary to Decimal</option> <!-- done -->
                     <option value="dec2bin">Decimal to Binary</option> <!-- done -->
                     <option value="hex2dec">Hexadecimal to Decimal</option> <!-- done -->
                     <option value="bin2hex">Binary to Hexadecimal</option> <!-- done -->
                     <option value="dec2hex">Decimal to Hexadecimal</option> <!-- done -->
                     <option value="hex2bin">Hexadecimal to Binary</option> <!-- done -->
                 </select>
-            <input type="button" value="Select" id="selected" class="btn">
-            <br>
-            <div class="input-value display-flex">
-                <span id="enter-number">Enter Number :</span>
-                <input type="text" name="" id="input-value" class="input">
-                <div id="input-button-wrapper" class="display-flex">
-                    <input type="button" value="Convert" id="convert" class="btn">
-                    <input type="button" value="Reset" id="reset" class="btn">
+                <input type="button" value="Select" id="selected" class="btn">
+                <br>
+                <div class="input-value display-flex">
+                    <span id="enter-number">Enter Number :</span>
+                    <input type="text" name="" id="input-value" class="input">
+                    <div id="input-button-wrapper" class="display-flex">
+                        <input type="button" value="Convert" id="convert" class="btn">
+                        <input type="button" value="Reset" id="reset" class="btn">
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="output display-flex">
-                <span id="conversion-name"></span>
-                <div id="output-value-wrapper" class="display-flex">
-                    <input type="text" name="conversion-name" id="output-value" class="input" readonly>
-                    <input type="button" value="copy" id="copy" >
+                <br>
+                <div class="output display-flex">
+                    <span id="conversion-name"></span>
+                    <div id="output-value-wrapper" class="display-flex">
+                        <input type="text" name="conversion-name" id="output-value" class="input" readonly>
+                        <input type="button" value="copy" id="copy">
+                    </div>
                 </div>
-            </div>
-        </p>
-        </form>
+                </p>
+            </form>
         </div>
+        <div class="img1">
+            <!-- <img src="./images/bg1.png"  class="illus1" alt=""> -->
+        </div>
+    </div>
 
     <script src="script/methods.js"></script>
     <script src="script/app.js"></script>
     <script src="script/input_validator.js"></script>
 </body>
+
 </html>
